fix overflow on mobile

--- a/style/style.css
+++ b/style/style.css
@@ -189,7 +189,7 @@ body {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  overflow-x: hidden;
+  overflow-y: hidden;
 }
 .image__slider_title {
   font-weight: 700;
@@ -202,7 +202,6 @@ body {
 .image__slider {
   display: flex;
   gap: 15px;
-  overflow-x: hidden;
 }
 .image__slider img {
   width: 270px;
